--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS Test</title>
     <script>
-        alert("hello, world")
+        alert("hello, world!")
     </script>
 </head>
 
